Json parser rework started API adjustments
Signed-off-by: David Kral <david.k.kral@oracle.com>